--- a/paywall/package.json
+++ b/paywall/package.json
@@ -54,8 +54,9 @@
     "run-script-os": "^1.0.5",
     "styled-components": "^4.1.3",
     "typescript": "^3.3.3",
-    "web3": "^1.0.0-beta.33",
-    "web3-utils": "^1.0.0-beta.33"
+    "web3": "1.0.0-beta.37",
+    "web3-eth-abi": "1.0.0-beta.37",
+    "web3-utils": "1.0.0-beta.37"
   },
   "lint-staged": {
     "linters": {
@@ -80,8 +81,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "nodemon": "^1.18.10",
-    "web3-eth-abi": "^1.0.0-beta.37"
+    "nodemon": "^1.18.10"
   },
   "engines": {
     "node": "=8.11.4"
