--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -10,6 +10,7 @@
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
     "@zeit/next-source-maps": "0.0.3",
+    "acorn": "^6.1.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -24,7 +25,7 @@
     "jest-mock-axios": "^2.1.11",
     "jest-styled-components": "^6.3.1",
     "jsonwebtoken": "^8.4.0",
-    "next": "^7.0.2",
+    "next": "^8.0.3",
     "nock": "^10.0.5",
     "path-match": "^1.2.4",
     "prop-types": "^15.6.1",
