--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
   - scripts/tests.sh paywall
   - scripts/integration-tests.sh
 after_success:
-  - scripts/deploy.sh netlify
+  - scripts/deploy.sh netlify $TRAVIS_COMMIT $TRAVIS_TAG $TRAVIS_BRANCH $TRAVIS_PULL_REQUEST
   - scripts/deploy-elasticbeanstalk.sh
   - test $TRAVIS_BRANCH = "master" && test $TRAVIS_PULL_REQUEST = "false" && scripts/push-image.sh unlock $TRAVIS_BRANCH
   - test $TRAVIS_BRANCH = "master" && test $TRAVIS_PULL_REQUEST = "false" && scripts/push-image.sh unlock-integration $TRAVIS_BRANCH
