--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^6.2.0",
     "eth-sig-util": "^2.1.1",
     "ethereumjs-util": "^6.0.0",
+    "ethers": "^4.0.26",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jest": "^23.6.0",
@@ -45,11 +46,13 @@
     "sequelize-cli": "^5.4.0",
     "supertest": "^3.3.0",
     "web3": "^1.0.0-beta.37",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "nock": "~10.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.8",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "supertest": "^3.3.0"
   },
   "jest": {
     "testMatch": [
