--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -35,14 +35,14 @@
   },
   "scripts": {
     "remix": "remixd -s contracts --remix-ide http://localhost:8080 --read-only",
-    "test": "truffle test --network development",
+    "test": "cross-env NODE_ENV=test truffle test --network development",
     "lint": "solhint \"contracts/**/*.sol\" && solium -d ./contracts/ && eslint .",
     "dev": "npm run lint && npm run build && npm run test",
     "ci": "npm run lint && npm run test && npm run coverage",
     "build": "truffle compile --all",
     "deploy": "truffle deploy",
     "zos": "zos",
-    "coverage": "cross-env TEST_COVERAGE=true solidity-coverage"
+    "coverage": "cross-env NODE_ENV=test cross-env TEST_COVERAGE=true solidity-coverage"
   },
   "author": "",
   "license": "ISC"
