Updates Locksmith with the ability to utilize a user config to local development
In order to help developers avoid accidently committing code containing their credentials, the configuration will utilize `config.user.js` when the file is present

--- a/locksmith/.sequelizerc
+++ b/locksmith/.sequelizerc
@@ -1,5 +1,17 @@
-const path = require('path');
+const fs = require('fs')
+const path = require('path')
+
+let configurationFile = () => {
+  let userFile  = path.resolve('config', 'config.user.js')
+  let generalFile = path.resolve('config', 'config.js')
+
+  if (fs.existsSync(userFile)) {
+    return userFile
+  } else {
+    return generalFile
+  }
+}
 
 module.exports = {
-  'config': path.resolve('config', 'config.js')
+  'config': path.resolve('config', configurationFile())
 }
