--- a/paywall/package.json
+++ b/paywall/package.json
@@ -11,6 +11,7 @@
     "before": "npm run build-paywall",
     "build": "npm run before && next build",
     "deploy": "next export -o src/out",
+    "deploy-netlify": "./scripts/deploy-netlify.sh",
     "start": "npm run before && next start",
     "test": "cross-env UNLOCK_ENV=test jest test.js --env=jsdom",
     "lint": "eslint .",
