--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -68,6 +68,7 @@
     "build": "npm run build-paywall && next build src",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "deploy": "next export src",
+    "deploy-netlify": "./scripts/deploy-netlify.sh",
     "start": "cross-env NODE_ENV=production node src/server.js",
     "setup-dev": "run-script-os",
     "setup-dev:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) && npm run deploy-lock",
