--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -37,10 +37,11 @@
     "test": "cross-env NODE_ENV=test truffle test --network development",
     "lint": "solhint \"contracts/**/*.sol\" && solium -d ./contracts/ && eslint .",
     "dev": "npm run lint && npm run build && npm run test",
-    "ci": "npm run lint && npm run test",
+    "ci": "npm run lint && npm run test && npm run reports",
     "build": "truffle compile --all",
     "deploy": "truffle deploy",
-    "zos": "zos"
+    "zos": "zos",
+    "reports": "truffle test ./reports/gas.js"
   },
   "author": "",
   "license": "ISC"
