wrapping bash variables in quotes (#1833)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
           command: scripts/pull-image.sh unlock "$CIRCLE_SHA1"
       - run:
           name: Deploy to Netlify
-          command: scripts/deploy.sh netlify $CIRCLE_SHA1 $CIRCLE_TAG $CIRCLE_BRANCH $IS_PULL_REQUEST
+          command: scripts/deploy.sh netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST"
 
   deploy-locksmith-beanstalk:
     machine: true
@@ -123,13 +123,13 @@ jobs:
       - checkout
       - run:
           name: Set GIT_COMMIT_DESC
-          command: echo 'export GIT_COMMIT_DESC=$(git log --format=%B -n 1 $CIRCLE_SHA1)' >> $BASH_ENV
+          command: echo 'export GIT_COMMIT_DESC=$(git log --format=%B -n 1 "$CIRCLE_SHA1")' >> $BASH_ENV
       - run:
           name: Set IS_PULL_REQUEST
           command: ./scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
       - run:
-          name: Deploy Locksmith to Beanstalk
-          command: locksmith/scripts/deploy-elasticbeanstalk.sh $CIRCLE_SHA1 $CIRCLE_BRANCH $IS_PULL_REQUEST "$GIT_COMMIT_DESC"
+          name: Deploy to to Beanstalk
+          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST" "$GIT_COMMIT_DESC"
 
   promote-unlock-image:
     machine: true
