--- a/paywall/package.json
+++ b/paywall/package.json
@@ -9,8 +9,8 @@
     "set-link:win32": "cd src && (if exist artifacts (rmdir artifacts /q /s || del artifacts)) && cmd /c mklink /d artifacts ..\\..\\smart-contracts\\build",
     "dev": "nodemon src/server.js",
     "before": "npm run build-paywall",
-    "build": "npm run before && next build",
-    "deploy": "next export -o src/out",
+    "build": "npm run before && next build src",
+    "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
     "start": "npm run before && next start",
     "test": "cross-env UNLOCK_ENV=test jest test.js --env=jsdom",
