Add dependency for connected-next-router

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "1.10.0",
     "color-scheme": "^1.0.1",
+    "connected-next-router": "^1.0.1",
     "connected-react-router": "^6.1.0",
     "cross-env": "^5.2.0",
     "ethereumjs-util": "^6.0.0",
