--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -67,7 +67,7 @@
     "set-link:win32": "cd src && (if exist artifacts (rmdir artifacts /q /s || del artifacts)) && cmd /c mklink /d artifacts ..\\..\\smart-contracts\\build",
     "build": "npm run build-paywall && next build src",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
-    "deploy": "next export src",
+    "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
     "start": "cross-env NODE_ENV=production node src/server.js",
     "setup-dev": "run-script-os",
