run chromatic in its own process on circle

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -82,7 +82,7 @@
     "chromatic": "chromatic test --exit-zero-on-changes",
     "svg-2-components": "./node_modules/@svgr/cli/bin/svgr --title-prop --no-dimensions --template src/components/interface/svg/template.js --no-dimensions -d src/components/interface/svg/ src/static/images/svg/",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
-    "ci": "npm run lint && npm test && npm run chromatic && npm run reformat && npm run fail-pending-changes",
+    "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
     "depcheck": "depcheck --parsers=\"*.js:react,*.js:es6\"",
     "npm-check": "npm-check -u"
   },
