--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -39,7 +39,7 @@
     "dev": "npm run lint && npm run build && npm run test",
     "ci": "npm run lint && npm run test && npm run reports",
     "build": "truffle compile --all",
-    "deploy": "truffle deploy --reset",
+    "deploy": "truffle deploy",
     "zos": "zos",
     "reports": "truffle test ./reports/gas.js"
   },
