configuration setup for chromatic

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -42,6 +42,7 @@
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-uglify": "^6.0.0",
     "run-script-os": "^1.0.5",
+    "storybook-chromatic": "^1.3.0",
     "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
     "terser": "^3.16.1",
@@ -78,6 +79,7 @@
     "reformat": "prettier-eslint \"src/**/*.js\" --write",
     "fail-pending-changes": "../scripts/pending-changes.sh",
     "storybook": "start-storybook -p 9001 -c .storybook -s src",
+    "chromatic": "chromatic test --exit-zero-on-changes",
     "svg-2-components": "./node_modules/@svgr/cli/bin/svgr --title-prop --no-dimensions --template src/components/interface/svg/template.js --no-dimensions -d src/components/interface/svg/ src/static/images/svg/",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
