--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -46,6 +46,7 @@
     "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
     "terser": "^3.16.1",
+    "unlock-abi-0": "^1.0.1",
     "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
   },
