--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -18,11 +18,13 @@
     "ethereumjs-units": "^0.2.0",
     "openzeppelin-eth": "^2.1.3",
     "openzeppelin-solidity": "^2.1.3",
+    "public-lock-abi-0": "^1.0.0",
     "shelljs": "^0.8.3",
     "solhint": "^2.0.0",
     "solium": "^1.2.3",
     "truffle": "^5.0.6",
     "truffle-hdwallet-provider": "^1.0.5",
+    "unlock-abi-0": "^1.0.1",
     "web3-eth-abi": "^1.0.0-beta.47",
     "web3-utils": "^1.0.0-beta.37",
     "zos": "^2.2.1",
