Now deploying the Unlock smart contract when starting in dev mode.

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -63,18 +63,16 @@
   },
   "engineStrict": true,
   "scripts": {
-    "dev": "npm run build-paywall && npm run setup-dev && npm run set-link && nodemon src/server.js",
-    "set-link": "run-script-os",
-    "set-link:darwin:freebsd:linux:sunos": "cd src && (test -e artifacts && rm -f artifacts) && ln -s ../../smart-contracts/build artifacts",
-    "set-link:win32": "cd src && (if exist artifacts (rmdir artifacts /q /s || del artifacts)) && cmd /c mklink /d artifacts ..\\..\\smart-contracts\\build",
+    "dev": "npm run build-paywall && npm run start-ganache && npm run deploy-unlock-contract && nodemon src/server.js",
     "build": "npm run build-paywall && next build src",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
+    "deploy-unlock-contract": "export UNLOCK_ADDRESS=`node scripts/deploy-unlock.js`",
     "start": "cross-env NODE_ENV=production node src/server.js",
-    "setup-dev": "run-script-os",
-    "setup-dev:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) && npm run deploy-lock",
-    "setup-dev:win32": "cd .. && (START /b npm run start-ganache -- -b 3 ) && npm run deploy-lock",
+    "start-ganache": "run-script-os",
+    "start-ganache:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) ",
+    "start-ganache:win32": "cd .. && (START /b npm run start-ganache -- -b 3 ) ",
     "test": "cross-env UNLOCK_ENV=test jest --env=jsdom",
     "lint": "eslint .",
     "reformat": "prettier-eslint \"src/**/*.js\" --write",
