add chromatic to config (#1857)
* add chromatic to config

* add chromaticqa to the ci build

* fake change to see what the diffs looks like

* whitespace

* Revert "fake change to see what the diffs looks like"

This reverts commit 22e911de14d384b1a887d9b1f2b8144ade4636e9.

* run chromatic in its own process on circle

* missing from workflow

* never require review on master builds, don't fail on PR builds

* Revert "Revert "fake change to see what the diffs looks like""

This reverts commit 082e8a54271267697a66b59dc5f36b16175ec6b2.

* Revert "Revert "Revert "fake change to see what the diffs looks like"""

This reverts commit ef5e45a336c0ae6b6079577f9384f1f5ce8707d6.

* de-couple the storybook script from circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,19 @@ jobs:
           name: Creator Dashboard tests
           command: scripts/tests.sh unlock-app
 
+  unlock-app-chromatic:
+    machine: true
+    environment:
+      DOCKER_REPOSITORY: unlockprotocol
+    steps:
+      - checkout
+      - run:
+          name: Pull Unlock Image
+          command: scripts/pull-image.sh unlock "$CIRCLE_SHA1"
+      - run:
+          name: Creator Dashboard stories
+          command: scripts/storybook.sh unlock-app "$CIRCLE_BRANCH"
+
   smart-contracts-tests:
     machine: true
     environment:
@@ -180,6 +193,9 @@ workflows:
       - build-unlock
       - build-unlock-integration
       - unlock-app-tests:
+          requires:
+            - build-unlock
+      - unlock-app-chromatic:
           requires:
             - build-unlock
       - smart-contracts-tests:
