--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -63,7 +63,7 @@
   },
   "engineStrict": true,
   "scripts": {
-    "dev": "npm run build-paywall && npm run start-ganache && npm run deploy-unlock-contract && nodemon src/server.js",
+    "dev": "npm run start-ganache && sleep 5 && npm run build-paywall && npm run deploy-unlock-contract && nodemon src/server.js",
     "build": "npm run build-paywall && next build src",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "deploy": "next export src -o out",
