--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -7,6 +7,7 @@
     "@storybook/addon-actions": "^4.1.13",
     "@storybook/addon-knobs": "^4.1.13",
     "@storybook/addon-storyshots": "^4.1.13",
+    "@storybook/addon-viewport": "^4.1.13",
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
     "@zeit/next-source-maps": "0.0.3",
