--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -20,7 +20,6 @@
     "openzeppelin-solidity": "^2.1.3",
     "public-lock-abi-0": "^1.0.0",
     "shelljs": "^0.8.3",
-    "solhint": "^2.0.0",
     "solium": "^1.2.3",
     "truffle": "^5.0.7",
     "truffle-hdwallet-provider": "^1.0.5",
@@ -37,7 +36,7 @@
   "scripts": {
     "remix": "remixd -s contracts --remix-ide http://localhost:8080 --read-only",
     "test": "cross-env NODE_ENV=test truffle test --network development",
-    "lint": "solhint \"contracts/**/*.sol\" && solium -d ./contracts/ && eslint .",
+    "lint": "solium -d ./contracts/ && eslint .",
     "dev": "npm run lint && npm run build && npm run test",
     "ci": "npm run lint && npm run test && npm run reports",
     "build": "truffle compile --all",
