--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "prettier-eslint-cli": "^4.7.1"
   },
   "devDependencies": {
-    "lint-staged": "^8.0.5",
-    "ganache-cli": "^6.2.3",
-    "husky": "^1.2.0"
+    "ganache-cli": "^6.4.1",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.0.5"
   },
   "scripts": {
     "link-parent-bin": "link-parent-bin -c . -s true",
