--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -64,12 +64,12 @@
   },
   "engineStrict": true,
   "scripts": {
-    "dev": "npm run start-ganache && sleep 5 && npm run build-paywall && npm run deploy-unlock-contract && nodemon src/server.js",
+    "dev": "npm run start-ganache && npm run build-paywall && npm run deploy-unlock-contract && nodemon src/server.js",
     "build": "npm run build-paywall && next build src",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
-    "deploy-unlock-contract": "export UNLOCK_ADDRESS=`node scripts/deploy-unlock.js`",
+    "deploy-unlock-contract": "node scripts/deploy-unlock.js",
     "start": "cross-env NODE_ENV=production node src/server.js",
     "start-ganache": "run-script-os",
     "start-ganache:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) ",
