--- a/paywall/package.json
+++ b/paywall/package.json
@@ -56,9 +56,9 @@
     "react-test-renderer": "^16.8.1",
     "react-testing-library": "^6.0.0",
     "redux": "^4.0.1",
-    "rollup": "^1.1.2",
+    "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-terser": "^4.0.4",
     "run-script-os": "^1.0.5",
     "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
