--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -39,9 +39,9 @@
     "react-test-renderer": "16.8.3",
     "react-testing-library": "^6.0.0",
     "redux": "^4.0.1",
-    "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup": "^1.6.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-terser": "^4.0.4",
     "run-script-os": "^1.0.5",
     "storybook-chromatic": "^1.3.0",
     "storybook-react-router": "^1.0.2",
