--- a/paywall/package.json
+++ b/paywall/package.json
@@ -50,10 +50,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-hooks-testing-library": "^0.3.6",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-test-renderer": "^16.8.1",
-    "react-testing-library": "^5.8.0",
+    "react-testing-library": "^6.0.0",
     "redux": "^4.0.1",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
