We can run tests now

--- a/unlock-app/.babelrc
+++ b/unlock-app/.babelrc
@@ -40,7 +40,8 @@
             "preset-env": {
               "modules": "commonjs"
             }
-          }
+          },
+          "@zeit/next-typescript/babel"
         ]
       ],
       "plugins": [
