--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -10,7 +10,11 @@
     "@storybook/addon-viewport": "^4.1.13",
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.7",
+    "@types/react-redux": "^7.0.3",
     "@zeit/next-source-maps": "0.0.3",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -47,6 +51,7 @@
     "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
     "terser": "^3.16.1",
+    "typescript": "^3.3.3333",
     "unlock-abi-0": "^1.0.1",
     "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
@@ -56,8 +61,9 @@
     "depcheck": "^0.7.1",
     "nodemon": "^1.18.9",
     "npm-check": "^5.9.0",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "react-router-test-context": "^0.1.0"
+    "react-router-test-context": "^0.1.0",
+    "ts-jest": "^24.0.0",
+    "web3-eth-abi": "1.0.0-beta.37"
   },
   "engines": {
     "node": "=8.11.4"
