--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -14,7 +14,8 @@
     "db:migrate": "sequelize db:migrate",
     "fail-pending-changes": "../scripts/pending-changes.sh",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
-    "build": "echo 'Nothing to build'"
+    "build": "echo 'Nothing to build'",
+    "tsc": "tsc"
   },
   "lint-staged": {
     "linters": {
@@ -28,6 +29,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.11",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -40,14 +43,16 @@
     "jest": "^23.6.0",
     "jsontokens": "^1.0.0",
     "lodash.isequal": "^4.5.0",
+    "nock": "~10.0.6",
     "node-mocks-http": "^1.7.3",
     "pg": "^7.7.1",
     "sequelize": "^4.41.2",
     "sequelize-cli": "^5.4.0",
     "supertest": "^3.3.0",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
     "web3": "^1.0.0-beta.37",
-    "winston": "^3.1.0",
-    "nock": "~10.0.6"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.8",
