--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -30,8 +30,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.4",
+    "@types/es6-promise": "^3.3.0",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
+    "@types/nock": "^9.3.1",
     "@types/supertest": "^2.0.7",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
