setting CHROMATIC_APP_CODE inside the build config so it can be used by external PRs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ jobs:
       - run:
           name: Creator Dashboard stories
           command: scripts/storybook.sh unlock-app "$CIRCLE_BRANCH"
+          environment:
+            CHROMATIC_APP_CODE: swpc6wf70qp
 
   smart-contracts-tests:
     machine: true
