--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "predev": "NODE_ENV=development sequelize db:migrate",
-    "dev": "nodemon build/server.js",
+    "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit",
     "lint": "eslint .",
@@ -61,7 +61,8 @@
   "devDependencies": {
     "nodemon": "^1.18.8",
     "sqlite3": "^4.0.6",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "tsc-watch": "^2.1.2"
   },
   "jest": {
     "testMatch": [
