skipping deployments on forked pull requests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,14 +121,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Set IS_PULL_REQUEST
-          command: scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Pull Unlock Image
           command: scripts/pull-image.sh unlock "$CIRCLE_SHA1"
       - run:
           name: Deploy to Netlify
-          command: scripts/deploy.sh unlock-app netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST"
+          command: scripts/deploy.sh unlock-app netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_FORKED_PR"
 
   deploy-paywall-netlify:
     machine: true
@@ -137,14 +137,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Set IS_PULL_REQUEST
-          command: scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Pull Unlock Image
           command: scripts/pull-image.sh unlock "$CIRCLE_SHA1"
       - run:
           name: Deploy to Netlify
-          command: scripts/deploy.sh paywall netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST"
+          command: scripts/deploy.sh paywall netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_FORKED_PR"
 
   deploy-locksmith-beanstalk:
     machine: true
@@ -156,11 +156,11 @@ jobs:
           name: Set GIT_COMMIT_DESC
           command: echo 'export GIT_COMMIT_DESC=$(git log --format=%B -n 1 "$CIRCLE_SHA1")' >> $BASH_ENV
       - run:
-          name: Set IS_PULL_REQUEST
-          command: ./scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: ./scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Deploy to to Beanstalk
-          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST" "$GIT_COMMIT_DESC"
+          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_FORKED_PR" "$GIT_COMMIT_DESC"
 
   promote-unlock-image:
     machine: true
