fixing the CHROMATIC_APP_CODE in the circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           name: Creator Dashboard stories
           command: scripts/storybook.sh unlock-app "$CIRCLE_BRANCH"
           environment:
-            CHROMATIC_APP_CODE: swpc6wf70qp
+            UNLOCK_APP_CHROMATIC_APP_CODE: swpc6wf70qp
 
   smart-contracts-tests:
     machine: true
