skipping deployments on forked pull requests (#2056)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,14 +145,14 @@ jobs:
           at: ../caches
       - checkout
       - run:
-          name: Set IS_PULL_REQUEST
-          command: scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Load Unlock Image
           command: docker load -i  "../caches/unlock.tar"
       - run:
           name: Deploy to Netlify
-          command: scripts/deploy.sh unlock-app netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST"
+          command: scripts/deploy.sh unlock-app netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_FORKED_PR"
 
   deploy-paywall-netlify:
     machine: true
@@ -163,14 +163,14 @@ jobs:
           at: ../caches
       - checkout
       - run:
-          name: Set IS_PULL_REQUEST
-          command: scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Load Unlock Image
           command: docker load -i "../caches/unlock.tar"
       - run:
           name: Deploy to Netlify
-          command: scripts/deploy.sh paywall netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST"
+          command: scripts/deploy.sh paywall netlify "$CIRCLE_SHA1" "$CIRCLE_TAG" "$CIRCLE_BRANCH" "$IS_FORKED_PR"
 
   deploy-locksmith-beanstalk:
     machine: true
@@ -182,11 +182,11 @@ jobs:
           name: Set GIT_COMMIT_DESC
           command: echo 'export GIT_COMMIT_DESC=$(git log --format=%B -n 1 "$CIRCLE_SHA1")' >> $BASH_ENV
       - run:
-          name: Set IS_PULL_REQUEST
-          command: ./scripts/circleci/set-is-pull-request.sh >> $BASH_ENV
+          name: Set IS_FORKED_PR
+          command: ./scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
       - run:
           name: Deploy to to Beanstalk
-          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_PULL_REQUEST" "$GIT_COMMIT_DESC"
+          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_FORKED_PR" "$GIT_COMMIT_DESC"
 
   promote-unlock-image:
     machine: true
