--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -10,7 +10,11 @@
     "@storybook/addon-viewport": "^4.1.13",
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.8",
+    "@types/react-redux": "^7.0.3",
     "@zeit/next-source-maps": "0.0.3",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -48,6 +52,8 @@
     "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
     "terser": "^3.16.1",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
     "unlock-abi-0": "^1.0.1",
     "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37",
@@ -58,8 +64,8 @@
     "depcheck": "^0.7.1",
     "nodemon": "^1.18.9",
     "npm-check": "^5.9.0",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "react-router-test-context": "^0.1.0"
+    "react-router-test-context": "^0.1.0",
+    "web3-eth-abi": "1.0.0-beta.37"
   },
   "engines": {
     "node": "=8.11.4"
@@ -86,7 +92,8 @@
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
     "depcheck": "depcheck --parsers=\"*.js:react,*.js:es6\"",
-    "npm-check": "npm-check -u"
+    "npm-check": "npm-check -u",
+    "tsc": "tsc"
   },
   "lint-staged": {
     "linters": {
